k8s/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: the-app-hub
  labels:
    app: the-app-hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: the-app-hub
  template:
    metadata:
      labels:
        app: the-app-hub
    spec:
      containers:
      - name: the-app-hub
        image: moabukar/the-app-hub:318e63c
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: the-app-hub
spec:
  selector:
    app: the-app-hub
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
  - name: app-port
    protocol: TCP
    port: 8086
    targetPort: 3000
