k8s/ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: the-app-hub-ingress
  annotations:
    cert-manager.io/cluster-issuer: "issuer"
spec:
  ingressClassName: nginx
  rules:
  - host: the-app-hub.moabukar.co.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: the-app-hub
            port:
              number: 80
  tls:
  - hosts:
    - the-app-hub.moabukar.co.uk
    secretName: the-app-hub-tls
